# ciao_tool_skeleton

./: Makefile.am  README.md  autogen.sh  configure.ac
pkgconfig/: ardlib.pc.in  ascdm.pc.in  readline.pc.in  region.pc.in
src/: Makefile.am
test/: Makefile.am
wrapper/: Makefile.am
